# gaia-workshop-2026

./: .treqs-ignore  CLAUDE.md  README.html  README.md  items.md  treqs_cli_reference.md  ttim.yaml  workshop_guide.md
sw_trace/: .gitignore  README.md  pyproject.toml
sw_trace/data/: metamodel.json
sw_trace/docs/: accuracy_report.md  technical_report.md
sw_trace/eval/: ground_truth.json  render_answers.py  run_openai.py  self_eval.py
sw_trace/logs/: token_usage_ledger.jsonl  token_usage_summary.json
sw_trace/logs/self_eval/: Q1_compact.json  Q1_effective.json  Q1_packet.json  Q1_prompt.txt  Q1_response.json  Q1_validation.json  Q2_compact.json  Q2_effective.json  Q2_packet.json  Q2_prompt.txt  Q2_response.json  Q2_validation.json  Q3_compact.json  Q3_effective.json  Q3_packet.json  Q3_prompt.txt  Q3_response.json  Q3_validation.json  Q4_compact.json  Q4_effective.json  Q4_packet.json  Q4_prompt.txt  Q4_response.json  Q4_validation.json  summary.json
sw_trace/notebooks/: workshop.ipynb
sw_trace/output/openai_gpt51/: answers.md  q1_answer.md  q2_answer.md  q3_answer.md  q4_answer.md
sw_trace/output/self_eval/: Q1_answer.md  Q2_answer.md  Q3_answer.md  Q4_answer.md  answers.md
sw_trace/src/sw_trace/: __init__.py  artifacts.py  config.py  extractor.py  graph.py  llm_client.py  metamodel.py  packet.py  paths.py  pipeline.py  planner.py  prompt.py  run_bundle.py  validator.py
